create-header-main-footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>GitEnGrupo</title>
   </head>
   <body>
-    <h1>Hola José Luis</h1>
+    <header>
+      <h1>Hola José Luis</h1>
+    </header>
+
+    <main></main>
+    <footer></footer>
   </body>
 </html>
