feat main structure

--- a/index.html
+++ b/index.html
@@ -6,12 +6,50 @@
     <title>GitEnGrupo</title>
   </head>
   <body>
-    <header>
-      <h1>Hola José Luis</h1>
-      <p>Yo me encargo del Body</p>
+    <header class="bk-header">
+      <a href="#"><img src="#" alt="bk_logo" /></a>
+      <ul class="menu">
+        <li>INICIO</li>
+        <li>CARTA</li>
+        <li>ORIGINALS</li>
+        <li>NOVEDADES</li>
+        <li>VEGETARIANO</li>
+        <li>MY BURGUER KING</li>
+        <li>BURGUER KING</li>
+      </ul>
+      <a href="#"><img src="#" alt="idioma" /></a>
+      <button class="btn-login">Iniciar Sesión</button>
     </header>
+    <br><br><br>
+    <main>
+      <div>
+        <img src="#" alt="bk-banner">
+        <button>Pide Ahora</button>
+      </div>
+        
+        <div class="circles">
+          <span class="circle"></span>
+          <span class="circle"></span>
+          <span class="circle"></span>
+          <span class="circle"></span>
+        </div>
+      </div>
 
-    <main></main>
+      <img src="#" alt="">
+      <img src="#" alt="">
+
+      <div>
+        <img src="#" alt="">
+        <button>DESCUBRE LAS OFERTAS</button>
+      </div>
+
+      <div>
+        <a href="#"><img src="#" alt=""></a>
+        <a href="#"><img src="downloadIos" alt=""><img src="#" alt=""></a>
+        <a href="#"><img src="downloadAndroid" alt=""><img src="#" alt=""></a>
+      </div>
+      
+    </main>
     <footer></footer>
   </body>
 </html>
