create branch footer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GitEnGrupo</title>
   </head>
-  <body>
+  <body> //terminarrrr
     <header class="bk-header">
       <a href="#"><img src="#" alt="bk_logo" /></a>
       <ul class="menu">
@@ -51,7 +51,7 @@
       
     </main>
   
-    <footer>
+    <footer> //terminarrrr
       <div class="b_footer">
         <div class="footer_1th">
           <div class="footer_1"><h3>PREGUNTAS FRECUENTES</h3></div>
